--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       at Uplift Code Camp and currently living here in UAE. Aside from studying,
       I do enjoy travelling a lot, watching videos about cars and etc.
       By the way, I am a graduate of Bachelor in Marine Transportation
-     at <a href="https://maap.edu.ph/">Maritime Academy of Asia and the Pacific in Mariveles</a>, Bataan.
+     at <a href="https://maap.edu.ph/">Maritime Academy of Asia and the Pacific</a> in Mariveles, Bataan.
     </p>
   <a href="#uwi">HOME</a>
  </div>
