--- a/index.html
+++ b/index.html
@@ -135,12 +135,9 @@
             <form>
               <fieldset class="fieldset1">
                 <legend class="legend">ANY INPUTS?PLEASE FILL UP!:</legend>
-                  <label for="first">Name:</label><br>
-                    <input type="text" class="input" required><br>
-                  <label for="email" > Email or Mobile#:</label><br>
-                    <input type="email" class="input" optional><br>
-                  <legend class="legend">Comments:</legend>
-                    <textarea name="comment" id="comment" cols="30" rows="10" optional></textarea><br>
+                    <input type="text" class="input" placeholder="Full Name:" required><br>
+                    <input type="email" class="input"  placeholder="Email or Mobile#:"><br>
+                    <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Comments:" optional></textarea><br>
                     <button type="submit" id="submit">Submit</button>
               </fieldset>  
             </form>
