--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <fieldset class="fieldset1">
                 <legend class="legend">ANY INPUTS?PLEASE FILL UP!:</legend>
                     <input type="text" class="input" placeholder="Full Name:" required><br>
-                    <input type="email" class="input"  placeholder="Email or Mobile#:"><br>
+                    <input type="email" class="input"  placeholder="Email:"><br>
                     <textarea name="comment" id="comment" cols="30" rows="10" placeholder="Comments:" optional></textarea><br>
                     <button type="submit" id="submit">Submit</button>
               </fieldset>  
